--- a/src/main/resources/static/forms/review_tweet.html
+++ b/src/main/resources/static/forms/review_tweet.html
@@ -1,5 +1,13 @@
 <form class="form-horizontal">
     <div class="form-group">
+        <label class="control-label col-md-4">email</label>
+        <div class="col-md-8">
+            <input type="text"
+                   cam-variable-name="email"
+                   cam-variable-type="String"
+                   required
+                   class="form-control" />
+        </div>
         <label class="control-label col-md-4">content</label>
         <div class="col-md-8">
             <input type="text"
